# pcl_recognizer

./: CMakeLists.txt  package.xml
cfg/: params.cfg
include/pcl_recognizer/: config.h  denoiser.h  describer.h  downsampler.h  preprocessed_data.h  preprocessor.h  recognizer.h  reconfigurable.h  utils.h  visualizer.h
launch/: pcl_recognizer.launch
src/: config.cpp  denoiser.cpp  describer.cpp  downsampler.cpp  main.cpp  preprocessor.cpp  recognizer.cpp  utils.cpp  visualizer.cpp
