<package>
    <name>pcl_recognizer</name>
    <version>0.0.1</version>
    <description>
        This package contains ROS nodes for object instance recognition based on PCL algorithms.
    </description>
    <author email="olesinski.jakub@gmail.com">Jakub Olesinski</author>
    <maintainer email="olesinski.jakub@gmail.com">Jakub Olesinski</maintainer>
    <license>MIT</license>
    <url type="website">http://ros.org/wiki/pcl_recognizer</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>pcl_ros</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>

    <run_depend>pcl_ros</run_depend>
    <run_depend>pcl_conversions</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>

</package>